[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aind-ephys-ibl-gui-conversion"
description = "Convert ephys data for use in IBL GUI"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Allen Institute for Neural Dynamics" },
  { name = "Arjun Sridhar", email = "arjun.sridhar1998@gmail.com" },
  { name = "yonibrowning", email = "yonib@uw.edu" },
  { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
  { name = "alakunina", email = "alakunina@gmail.com" },
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.3.2"

dependencies = [
    "aind-mri-utils",
    "antspyx>=0.4.2",
    "iblatlas",
    "one-api>=2.6.0",
    "spikeinterface[full]>=0.104.0",
    "tqdm>=4.66.1",
    "wavpack-numcodecs",
    "numpy",
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-ephys-ibl-gui-conversion/"
Issues = "https://github.com/AllenNeuralDynamics/aind-ephys-ibl-gui-conversion/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-ephys-ibl-gui-conversion/blob/main/CHANGELOG.md"

[dependency-groups]
types = ["mypy"]
dev = [{ include-group = "types" }, "codespell", "pytest", "pytest-cov", "ruff", "interrogate"]
jupyter = [{ include-group = "dev" }, "ipykernel", "pip"]

[tool.hatch.build.targets.wheel]
packages = ["src/aind_ephys_ibl_gui_conversion"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["scratch"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W", "UP", "PYI"]
mccabe = { max-complexity = 14 }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./docs/build,uv.lock,scratch"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 100
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "examples",
  "site",
  "scratch",
  ".venv",
]

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true

[tool.mypy]
files = ["src/aind_ephys_ibl_gui_conversion"]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

